[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_prototype_lyon = "0.8.0"
bevy_iced = "0.3.0"
iced = {version = "0.9.0", features = ["canvas"]}
winit = { version = "0.28.6", default-features = false }
image = { version = "0.24.6", default-features = false }

[build-dependencies]
embed-resource = "2.2.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
