[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_prototype_lyon = "0.8.0"
bevy_asset_loader = "0.16"
bevy_iced = { git = "https://github.com/nikolajevs86/bevy_iced", rev = "f081111" }
iced = {version = "0.9.0", features = ["canvas"]}
winit = { version = "0.28.6", default-features = false }
image = { version = "0.24.6", default-features = false }
console_error_panic_hook = "0.1"

[build-dependencies]
embed-resource = "2.2.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"